--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -29,6 +29,10 @@ jobs:
           terraform_version: "1.10.3"
 
       - name: Initialize terraform
-        run: terraform init
+        run: |
+          terraform init \
+          -backend-config="bucket=${{ secrets.TF_S3_BACKEND_BUCKET_NAME} }" \
+          -backend-config="key=${{ secret.TF_S3_BACKEND_KEY }}" \
+          -backend-config="dynamodb_table=${{ secret.TF_S3_BACKEND_DYNAMODB_TABLE }}"
       - name: List state file resources
         run: terraform state list
