--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           terraform init \
           -backend-config="bucket=${{ secrets.TF_S3_BACKEND_BUCKET_NAME }}" \
-          -backend-config="key=${{ secret.TF_S3_BACKEND_KEY }}" \
-          -backend-config="dynamodb_table=${{ secret.TF_S3_BACKEND_DYNAMODB_TABLE }}"
+          -backend-config="key=${{ secrets.TF_S3_BACKEND_KEY }}" \
+          -backend-config="dynamodb_table=${{ secrets.TF_S3_BACKEND_DYNAMODB_TABLE }}"
       - name: List state file resources
         run: terraform state list
