--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -33,6 +33,8 @@ jobs:
           terraform init \
           -backend-config="bucket=${{ secrets.TF_S3_BACKEND_BUCKET_NAME }}" \
           -backend-config="key=${{ secrets.TF_S3_BACKEND_KEY }}" \
-          -backend-config="dynamodb_table=${{ secrets.TF_S3_BACKEND_DYNAMODB_TABLE }}"
+          -backend-config="dynamodb_table=${{ secrets.TF_S3_BACKEND_DYNAMODB_TABLE }}" \
+          -backend-config="assume_role={role_arn=\"${{ secrets.TF_S3_BACKEND_ROLE_ARN }}\"}"
+
       - name: List state file resources
         run: terraform state list
