--- a/.github/workflows/infracost.yaml
+++ b/.github/workflows/infracost.yaml
@@ -47,4 +47,5 @@ jobs:
                                      --repo=$GITHUB_REPOSITORY \
                                      --github-token=${{ github.token }} \
                                      --pull-request=${{ github.event.pull_request.number }} \
-                                     --behavior=update
+                                     --behavior=update \
+                                     --policy-path=policies/max_cost.rego
