--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -4,7 +4,8 @@ on: workflow_dispatch
 
 env:
   AWS_REGION:  us-east-1
-
+  GH_TOKEN: ${{ github.token }}
+  
 permissions:
   id-token: write
   contents: read
