--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -30,6 +30,22 @@ jobs:
         with:
           terraform_version: "1.10.3"
 
+      - name: Config Terraform plugin cache
+        run: |
+          echo 'plugin_cache_dir="~/.terraform.d/plugin-cache"' > ~/.terraformrc
+          mkdir -p ~/.terraform.d/plugin-cache
+          echo "ls home dir"
+          ls ~
+          echo "ls ${{ github.workspace }}"
+          ls ${{ github.workspace }}
+
+      - name: Cache Terraform Plugins
+        uses: actions/cache@v4
+        with:
+          path: ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: ${{ runner.os }}-terraform-
+
       - name: Initialize terraform
         run: |
           terraform init \
