--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -6,6 +6,7 @@ env:
   AWS_REGION:  us-east-1
   GH_TOKEN: ${{ github.token }}
   TF_IN_AUTOMATION: true
+  TF_PLUGIN_CACHE_DIR=: "${HOME}/.terraform.d/plugin-cache"
 
 permissions:
   id-token: write
@@ -31,9 +32,7 @@ jobs:
           terraform_version: "1.10.3"
 
       - name: Config Terraform plugin cache
-        run: |
-          echo 'plugin_cache_dir="~/.terraform.d/plugin-cache"' > ~/.terraformrc
-          mkdir -p ~/.terraform.d/plugin-cache
+        run: mkdir -pv ~/.terraform.d/plugin-cache
 
       - name: Cache Terraform Plugins
         uses: actions/cache@v4
