--- a/.github/workflows/terraform-docs.yaml
+++ b/.github/workflows/terraform-docs.yaml
@@ -1,6 +1,7 @@
 name: Generate terraform docs
 on:
-  - pull_request
+  pull_request:
+    types: [opened, synchronize, closed]
 
 permissions:
   contents: write
