--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -75,8 +75,9 @@ jobs:
     steps:
       - name: Run Checkov action
         id: checkov
-        uses: bridgecrewio/checkov-action@master
+        uses: bridgecrewio/checkov-action@v12
         with:
-          directory: .
+          directory: ${{ github.workspace }}
+          output_format: cli
           soft_fail: false
           download_external_modules: true
