--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -78,6 +78,7 @@ jobs:
         uses: bridgecrewio/checkov-action@v12
         with:
           directory: ${{ github.workspace }}
+          framework: terraform
           output_format: cli
           soft_fail: false
           download_external_modules: true
