--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -77,7 +77,7 @@ jobs:
         id: checkov
         uses: bridgecrewio/checkov-action@v12
         with:
-          directory: ${{ github.workspace }}
+          file: terraform-plan.json
           framework: terraform
           output_format: cli
           soft_fail: false
